--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "framer-motion": "^12.4.3",
     "mongodb": "^6.13.0",
     "mongoose": "^8.10.1",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
